--- a/vsprojects/PNGPOKER/PNGPOKER.csproj
+++ b/vsprojects/PNGPOKER/PNGPOKER.csproj
@@ -52,12 +52,26 @@
     <Compile Include="Common\Enums.cs" />
     <Compile Include="Common\CardHelper.cs" />
     <Compile Include="Common\HandHelper.cs" />
+    <Compile Include="Common\Helper.cs" />
     <Compile Include="Model\Card.cs" />
     <Compile Include="Model\Cards.cs" />
     <Compile Include="Model\Deck.cs" />
     <Compile Include="Model\Hand.cs" />
-    <Compile Include="Model\Game\IGame.cs" />
-    <Compile Include="Model\Player\IPlayer.cs" />
+    <Compile Include="Interface\IGame.cs" />
+    <Compile Include="Interface\IHandType.cs" />
+    <Compile Include="Model\HandType\FlushHandType.cs" />
+    <Compile Include="Model\HandType\HandType.cs" />
+    <Compile Include="Model\HandType\HandTypes.cs" />
+    <Compile Include="Model\HandType\StraightHandType.cs" />
+    <Compile Include="Model\HandType\ThreeOfAKindHandType.cs" />
+    <Compile Include="Model\HandType\TwoPairHandType.cs" />
+    <Compile Include="Model\HandType\OnePairHandType.cs" />
+    <Compile Include="Model\HandType\HighCardHandType.cs" />
+    <Compile Include="Model\HandType\FullHouseHandType.cs" />
+    <Compile Include="Model\HandType\FourOfAKindHandType.cs" />
+    <Compile Include="Model\HandType\StraightFlushHandType.cs" />
+    <Compile Include="Model\HandType\RoyalFlushHandType.cs" />
+    <Compile Include="Interface\IPlayer.cs" />
     <Compile Include="Model\Player\PokerPlayer.cs" />
     <Compile Include="Model\Game\PokerGame.cs" />
     <Compile Include="Program.cs" />
