--- a/vsprojects/PNGGame/PNGGame.csproj
+++ b/vsprojects/PNGGame/PNGGame.csproj
@@ -1,23 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="packages\NUnit.3.12.0\build\NUnit.props" Condition="Exists('packages\NUnit.3.12.0\build\NUnit.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{665EC0C3-45CA-437A-A852-A7723F08A08A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>PNGPOKER</RootNamespace>
-    <AssemblyName>PNGPOKER</AssemblyName>
+    <ProjectGuid>{D6835FF5-FD3B-462E-9EB3-2D8E13FA5E7D}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>PNGGame</RootNamespace>
+    <AssemblyName>PNGGame</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -27,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -36,9 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,24 +41,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Common\CardHelper.cs" />
+    <Compile Include="Common\Enums.cs" />
+    <Compile Include="Common\HandHelper.cs" />
+    <Compile Include="Model\HandType\FlushHandType.cs" />
+    <Compile Include="Model\HandType\FourOfAKindHandType.cs" />
+    <Compile Include="Model\HandType\FullHouseHandType.cs" />
+    <Compile Include="Model\HandType\HandType.cs" />
+    <Compile Include="Model\HandType\HandTypes.cs" />
+    <Compile Include="Model\HandType\HighCardHandType.cs" />
+    <Compile Include="Model\HandType\OnePairHandType.cs" />
+    <Compile Include="Model\HandType\RoyalFlushHandType.cs" />
+    <Compile Include="Model\HandType\StraightFlushHandType.cs" />
+    <Compile Include="Model\HandType\StraightHandType.cs" />
+    <Compile Include="Model\HandType\ThreeOfAKindHandType.cs" />
+    <Compile Include="Model\HandType\TwoPairHandType.cs" />
+    <Compile Include="Common\Helper.cs" />
+    <Compile Include="Interface\IGame.cs" />
+    <Compile Include="Interface\IHandType.cs" />
+    <Compile Include="Interface\IPlayer.cs" />
+    <Compile Include="Model\Card\Card.cs" />
+    <Compile Include="Model\Card\Cards.cs" />
+    <Compile Include="Model\Game\Deck.cs" />
+    <Compile Include="Model\Game\PokerGame.cs" />
+    <Compile Include="Model\Player\Hand.cs" />
+    <Compile Include="Model\Player\Player.cs" />
+    <Compile Include="Model\Player\PokerPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PNGGame\PNGGame.csproj">
-      <Project>{d6835ff5-fd3b-462e-9eb3-2d8e13fa5e7d}</Project>
-      <Name>PNGGame</Name>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('packages\NUnit.3.12.0\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\NUnit.3.12.0\build\NUnit.props'))" />
-  </Target>
 </Project>
