Clean up and created initial code for evaluating winners per hand category

--- a/vsprojects/PNGGame/PNGGame.csproj
+++ b/vsprojects/PNGGame/PNGGame.csproj
@@ -44,27 +44,15 @@
     <Compile Include="Common\CardHelper.cs" />
     <Compile Include="Common\Enums.cs" />
     <Compile Include="Common\HandHelper.cs" />
-    <Compile Include="Model\HandType\FlushHandType.cs" />
-    <Compile Include="Model\HandType\FourOfAKindHandType.cs" />
-    <Compile Include="Model\HandType\FullHouseHandType.cs" />
-    <Compile Include="Model\HandType\HandType.cs" />
-    <Compile Include="Model\HandType\HandTypes.cs" />
-    <Compile Include="Model\HandType\HighCardHandType.cs" />
-    <Compile Include="Model\HandType\OnePairHandType.cs" />
-    <Compile Include="Model\HandType\RoyalFlushHandType.cs" />
-    <Compile Include="Model\HandType\StraightFlushHandType.cs" />
-    <Compile Include="Model\HandType\StraightHandType.cs" />
-    <Compile Include="Model\HandType\ThreeOfAKindHandType.cs" />
-    <Compile Include="Model\HandType\TwoPairHandType.cs" />
     <Compile Include="Common\Helper.cs" />
     <Compile Include="Interface\IGame.cs" />
-    <Compile Include="Interface\IHandType.cs" />
     <Compile Include="Interface\IPlayer.cs" />
     <Compile Include="Model\Card\Card.cs" />
     <Compile Include="Model\Card\Cards.cs" />
-    <Compile Include="Model\Game\Deck.cs" />
+    <Compile Include="Model\Deck\Deck.cs" />
+    <Compile Include="Model\Game\Game.cs" />
     <Compile Include="Model\Game\PokerGame.cs" />
-    <Compile Include="Model\Player\Hand.cs" />
+    <Compile Include="Model\Hand\Hand.cs" />
     <Compile Include="Model\Player\Player.cs" />
     <Compile Include="Model\Player\PokerPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
